Project3/Project3/parser.out
Created by PLY version 3.7 (http://www.dabeaz.com/ply)

Unused terminals:

    CHAR_LITERAL
    WHITESPACE
    COMMENT
    STRING_LITERAL

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> <empty>
Rule 3     statements -> statements statement
Rule 4     statement -> expression ;
Rule 5     statement -> declaration ;
Rule 6     statement -> print_statement ;
Rule 7     print_statement -> COMMAND_PRINT ( non_empty_comma_sep_expr )
Rule 8     non_empty_comma_sep_expr -> expression
Rule 9     non_empty_comma_sep_expr -> expression , non_empty_comma_sep_expr
Rule 10    declaration -> simple_declaration
Rule 11    declaration -> assign_declaration
Rule 12    simple_declaration -> type ID
Rule 13    assign_declaration -> simple_declaration = expression
Rule 14    var_usage -> ID
Rule 15    expression -> var_usage = expression
Rule 16    expression -> var_usage ASSIGN_ADD expression
Rule 17    expression -> var_usage ASSIGN_SUB expression
Rule 18    expression -> var_usage ASSIGN_MULT expression
Rule 19    expression -> var_usage ASSIGN_DIV expression
Rule 20    expression -> var_usage
Rule 21    expression -> COMMAND_RANDOM ( expression )
Rule 22    type -> TYPE
Rule 23    expression -> expression BOOL_AND expression
Rule 24    expression -> expression BOOL_OR expression
Rule 25    expression -> VAL_LITERAL
Rule 26    expression -> expression - expression
Rule 27    expression -> expression * expression
Rule 28    expression -> expression / expression
Rule 29    expression -> expression + expression
Rule 30    expression -> expression COMP_EQU expression
Rule 31    expression -> expression COMP_NEQU expression
Rule 32    expression -> - expression
Rule 33    expression -> expression COMP_LESS expression
Rule 34    expression -> expression COMP_GTR expression
Rule 35    expression -> expression COMP_LTE expression
Rule 36    expression -> expression COMP_GTE expression
Rule 37    expression -> ( expression )

Terminals, with rules where they appear

(                    : 7 21 37
)                    : 7 21 37
*                    : 27
+                    : 29
,                    : 9
-                    : 26 32
/                    : 28
;                    : 4 5 6
=                    : 13 15
ASSIGN_ADD           : 16
ASSIGN_DIV           : 19
ASSIGN_MULT          : 18
ASSIGN_SUB           : 17
BOOL_AND             : 23
BOOL_OR              : 24
CHAR_LITERAL         : 
COMMAND_PRINT        : 7
COMMAND_RANDOM       : 21
COMMENT              : 
COMP_EQU             : 30
COMP_GTE             : 36
COMP_GTR             : 34
COMP_LESS            : 33
COMP_LTE             : 35
COMP_NEQU            : 31
ID                   : 12 14
STRING_LITERAL       : 
TYPE                 : 22
VAL_LITERAL          : 25
WHITESPACE           : 
error                : 

Nonterminals, with rules where they appear

assign_declaration   : 11
declaration          : 5
expression           : 4 8 9 13 15 16 17 18 19 21 23 23 24 24 26 26 27 27 28 28 29 29 30 30 31 31 32 33 33 34 34 35 35 36 36 37
non_empty_comma_sep_expr : 7 9
print_statement      : 6
program              : 0
simple_declaration   : 10 13
statement            : 3
statements           : 1 3
type                 : 12
var_usage            : 15 16 17 18 19 20

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> .
    (3) statements -> . statements statement

    COMMAND_RANDOM  reduce using rule 2 (statements -> .)
    VAL_LITERAL     reduce using rule 2 (statements -> .)
    -               reduce using rule 2 (statements -> .)
    (               reduce using rule 2 (statements -> .)
    COMMAND_PRINT   reduce using rule 2 (statements -> .)
    ID              reduce using rule 2 (statements -> .)
    TYPE            reduce using rule 2 (statements -> .)
    $end            reduce using rule 2 (statements -> .)

    program                        shift and go to state 1
    statements                     shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (3) statements -> statements . statement
    (4) statement -> . expression ;
    (5) statement -> . declaration ;
    (6) statement -> . print_statement ;
    (15) expression -> . var_usage = expression
    (16) expression -> . var_usage ASSIGN_ADD expression
    (17) expression -> . var_usage ASSIGN_SUB expression
    (18) expression -> . var_usage ASSIGN_MULT expression
    (19) expression -> . var_usage ASSIGN_DIV expression
    (20) expression -> . var_usage
    (21) expression -> . COMMAND_RANDOM ( expression )
    (23) expression -> . expression BOOL_AND expression
    (24) expression -> . expression BOOL_OR expression
    (25) expression -> . VAL_LITERAL
    (26) expression -> . expression - expression
    (27) expression -> . expression * expression
    (28) expression -> . expression / expression
    (29) expression -> . expression + expression
    (30) expression -> . expression COMP_EQU expression
    (31) expression -> . expression COMP_NEQU expression
    (32) expression -> . - expression
    (33) expression -> . expression COMP_LESS expression
    (34) expression -> . expression COMP_GTR expression
    (35) expression -> . expression COMP_LTE expression
    (36) expression -> . expression COMP_GTE expression
    (37) expression -> . ( expression )
    (10) declaration -> . simple_declaration
    (11) declaration -> . assign_declaration
    (7) print_statement -> . COMMAND_PRINT ( non_empty_comma_sep_expr )
    (14) var_usage -> . ID
    (12) simple_declaration -> . type ID
    (13) assign_declaration -> . simple_declaration = expression
    (22) type -> . TYPE

    $end            reduce using rule 1 (program -> statements .)
    COMMAND_RANDOM  shift and go to state 9
    VAL_LITERAL     shift and go to state 8
    -               shift and go to state 14
    (               shift and go to state 3
    COMMAND_PRINT   shift and go to state 16
    ID              shift and go to state 15
    TYPE            shift and go to state 13

    simple_declaration             shift and go to state 17
    assign_declaration             shift and go to state 10
    print_statement                shift and go to state 6
    declaration                    shift and go to state 7
    var_usage                      shift and go to state 5
    type                           shift and go to state 12
    expression                     shift and go to state 11
    statement                      shift and go to state 4

state 3

    (37) expression -> ( . expression )
    (15) expression -> . var_usage = expression
    (16) expression -> . var_usage ASSIGN_ADD expression
    (17) expression -> . var_usage ASSIGN_SUB expression
    (18) expression -> . var_usage ASSIGN_MULT expression
    (19) expression -> . var_usage ASSIGN_DIV expression
    (20) expression -> . var_usage
    (21) expression -> . COMMAND_RANDOM ( expression )
    (23) expression -> . expression BOOL_AND expression
    (24) expression -> . expression BOOL_OR expression
    (25) expression -> . VAL_LITERAL
    (26) expression -> . expression - expression
    (27) expression -> . expression * expression
    (28) expression -> . expression / expression
    (29) expression -> . expression + expression
    (30) expression -> . expression COMP_EQU expression
    (31) expression -> . expression COMP_NEQU expression
    (32) expression -> . - expression
    (33) expression -> . expression COMP_LESS expression
    (34) expression -> . expression COMP_GTR expression
    (35) expression -> . expression COMP_LTE expression
    (36) expression -> . expression COMP_GTE expression
    (37) expression -> . ( expression )
    (14) var_usage -> . ID

    COMMAND_RANDOM  shift and go to state 9
    VAL_LITERAL     shift and go to state 8
    -               shift and go to state 14
    (               shift and go to state 3
    ID              shift and go to state 15

    var_usage                      shift and go to state 5
    expression                     shift and go to state 18

state 4

    (3) statements -> statements statement .

    COMMAND_RANDOM  reduce using rule 3 (statements -> statements statement .)
    VAL_LITERAL     reduce using rule 3 (statements -> statements statement .)
    -               reduce using rule 3 (statements -> statements statement .)
    (               reduce using rule 3 (statements -> statements statement .)
    COMMAND_PRINT   reduce using rule 3 (statements -> statements statement .)
    ID              reduce using rule 3 (statements -> statements statement .)
    TYPE            reduce using rule 3 (statements -> statements statement .)
    $end            reduce using rule 3 (statements -> statements statement .)


state 5

    (15) expression -> var_usage . = expression
    (16) expression -> var_usage . ASSIGN_ADD expression
    (17) expression -> var_usage . ASSIGN_SUB expression
    (18) expression -> var_usage . ASSIGN_MULT expression
    (19) expression -> var_usage . ASSIGN_DIV expression
    (20) expression -> var_usage .

    =               shift and go to state 20
    ASSIGN_ADD      shift and go to state 21
    ASSIGN_SUB      shift and go to state 19
    ASSIGN_MULT     shift and go to state 23
    ASSIGN_DIV      shift and go to state 22
    BOOL_AND        reduce using rule 20 (expression -> var_usage .)
    BOOL_OR         reduce using rule 20 (expression -> var_usage .)
    -               reduce using rule 20 (expression -> var_usage .)
    *               reduce using rule 20 (expression -> var_usage .)
    /               reduce using rule 20 (expression -> var_usage .)
    +               reduce using rule 20 (expression -> var_usage .)
    COMP_EQU        reduce using rule 20 (expression -> var_usage .)
    COMP_NEQU       reduce using rule 20 (expression -> var_usage .)
    COMP_LESS       reduce using rule 20 (expression -> var_usage .)
    COMP_GTR        reduce using rule 20 (expression -> var_usage .)
    COMP_LTE        reduce using rule 20 (expression -> var_usage .)
    COMP_GTE        reduce using rule 20 (expression -> var_usage .)
    ;               reduce using rule 20 (expression -> var_usage .)
    )               reduce using rule 20 (expression -> var_usage .)
    ,               reduce using rule 20 (expression -> var_usage .)


state 6

    (6) statement -> print_statement . ;

    ;               shift and go to state 24


state 7

    (5) statement -> declaration . ;

    ;               shift and go to state 25


state 8

    (25) expression -> VAL_LITERAL .

    BOOL_AND        reduce using rule 25 (expression -> VAL_LITERAL .)
    BOOL_OR         reduce using rule 25 (expression -> VAL_LITERAL .)
    -               reduce using rule 25 (expression -> VAL_LITERAL .)
    *               reduce using rule 25 (expression -> VAL_LITERAL .)
    /               reduce using rule 25 (expression -> VAL_LITERAL .)
    +               reduce using rule 25 (expression -> VAL_LITERAL .)
    COMP_EQU        reduce using rule 25 (expression -> VAL_LITERAL .)
    COMP_NEQU       reduce using rule 25 (expression -> VAL_LITERAL .)
    COMP_LESS       reduce using rule 25 (expression -> VAL_LITERAL .)
    COMP_GTR        reduce using rule 25 (expression -> VAL_LITERAL .)
    COMP_LTE        reduce using rule 25 (expression -> VAL_LITERAL .)
    COMP_GTE        reduce using rule 25 (expression -> VAL_LITERAL .)
    ;               reduce using rule 25 (expression -> VAL_LITERAL .)
    )               reduce using rule 25 (expression -> VAL_LITERAL .)
    ,               reduce using rule 25 (expression -> VAL_LITERAL .)


state 9

    (21) expression -> COMMAND_RANDOM . ( expression )

    (               shift and go to state 26


state 10

    (11) declaration -> assign_declaration .

    ;               reduce using rule 11 (declaration -> assign_declaration .)


state 11

    (4) statement -> expression . ;
    (23) expression -> expression . BOOL_AND expression
    (24) expression -> expression . BOOL_OR expression
    (26) expression -> expression . - expression
    (27) expression -> expression . * expression
    (28) expression -> expression . / expression
    (29) expression -> expression . + expression
    (30) expression -> expression . COMP_EQU expression
    (31) expression -> expression . COMP_NEQU expression
    (33) expression -> expression . COMP_LESS expression
    (34) expression -> expression . COMP_GTR expression
    (35) expression -> expression . COMP_LTE expression
    (36) expression -> expression . COMP_GTE expression

    ;               shift and go to state 30
    BOOL_AND        shift and go to state 36
    BOOL_OR         shift and go to state 28
    -               shift and go to state 35
    *               shift and go to state 31
    /               shift and go to state 29
    +               shift and go to state 39
    COMP_EQU        shift and go to state 27
    COMP_NEQU       shift and go to state 32
    COMP_LESS       shift and go to state 38
    COMP_GTR        shift and go to state 33
    COMP_LTE        shift and go to state 37
    COMP_GTE        shift and go to state 34


state 12

    (12) simple_declaration -> type . ID

    ID              shift and go to state 40


state 13

    (22) type -> TYPE .

    ID              reduce using rule 22 (type -> TYPE .)


state 14

    (32) expression -> - . expression
    (15) expression -> . var_usage = expression
    (16) expression -> . var_usage ASSIGN_ADD expression
    (17) expression -> . var_usage ASSIGN_SUB expression
    (18) expression -> . var_usage ASSIGN_MULT expression
    (19) expression -> . var_usage ASSIGN_DIV expression
    (20) expression -> . var_usage
    (21) expression -> . COMMAND_RANDOM ( expression )
    (23) expression -> . expression BOOL_AND expression
    (24) expression -> . expression BOOL_OR expression
    (25) expression -> . VAL_LITERAL
    (26) expression -> . expression - expression
    (27) expression -> . expression * expression
    (28) expression -> . expression / expression
    (29) expression -> . expression + expression
    (30) expression -> . expression COMP_EQU expression
    (31) expression -> . expression COMP_NEQU expression
    (32) expression -> . - expression
    (33) expression -> . expression COMP_LESS expression
    (34) expression -> . expression COMP_GTR expression
    (35) expression -> . expression COMP_LTE expression
    (36) expression -> . expression COMP_GTE expression
    (37) expression -> . ( expression )
    (14) var_usage -> . ID

    COMMAND_RANDOM  shift and go to state 9
    VAL_LITERAL     shift and go to state 8
    -               shift and go to state 14
    (               shift and go to state 3
    ID              shift and go to state 15

    var_usage                      shift and go to state 5
    expression                     shift and go to state 41

state 15

    (14) var_usage -> ID .

    =               reduce using rule 14 (var_usage -> ID .)
    ASSIGN_ADD      reduce using rule 14 (var_usage -> ID .)
    ASSIGN_SUB      reduce using rule 14 (var_usage -> ID .)
    ASSIGN_MULT     reduce using rule 14 (var_usage -> ID .)
    ASSIGN_DIV      reduce using rule 14 (var_usage -> ID .)
    ;               reduce using rule 14 (var_usage -> ID .)
    BOOL_AND        reduce using rule 14 (var_usage -> ID .)
    BOOL_OR         reduce using rule 14 (var_usage -> ID .)
    -               reduce using rule 14 (var_usage -> ID .)
    *               reduce using rule 14 (var_usage -> ID .)
    /               reduce using rule 14 (var_usage -> ID .)
    +               reduce using rule 14 (var_usage -> ID .)
    COMP_EQU        reduce using rule 14 (var_usage -> ID .)
    COMP_NEQU       reduce using rule 14 (var_usage -> ID .)
    COMP_LESS       reduce using rule 14 (var_usage -> ID .)
    COMP_GTR        reduce using rule 14 (var_usage -> ID .)
    COMP_LTE        reduce using rule 14 (var_usage -> ID .)
    COMP_GTE        reduce using rule 14 (var_usage -> ID .)
    )               reduce using rule 14 (var_usage -> ID .)
    ,               reduce using rule 14 (var_usage -> ID .)


state 16

    (7) print_statement -> COMMAND_PRINT . ( non_empty_comma_sep_expr )

    (               shift and go to state 42


state 17

    (10) declaration -> simple_declaration .
    (13) assign_declaration -> simple_declaration . = expression

    ;               reduce using rule 10 (declaration -> simple_declaration .)
    =               shift and go to state 43


state 18

    (37) expression -> ( expression . )
    (23) expression -> expression . BOOL_AND expression
    (24) expression -> expression . BOOL_OR expression
    (26) expression -> expression . - expression
    (27) expression -> expression . * expression
    (28) expression -> expression . / expression
    (29) expression -> expression . + expression
    (30) expression -> expression . COMP_EQU expression
    (31) expression -> expression . COMP_NEQU expression
    (33) expression -> expression . COMP_LESS expression
    (34) expression -> expression . COMP_GTR expression
    (35) expression -> expression . COMP_LTE expression
    (36) expression -> expression . COMP_GTE expression

    )               shift and go to state 44
    BOOL_AND        shift and go to state 36
    BOOL_OR         shift and go to state 28
    -               shift and go to state 35
    *               shift and go to state 31
    /               shift and go to state 29
    +               shift and go to state 39
    COMP_EQU        shift and go to state 27
    COMP_NEQU       shift and go to state 32
    COMP_LESS       shift and go to state 38
    COMP_GTR        shift and go to state 33
    COMP_LTE        shift and go to state 37
    COMP_GTE        shift and go to state 34


state 19

    (17) expression -> var_usage ASSIGN_SUB . expression
    (15) expression -> . var_usage = expression
    (16) expression -> . var_usage ASSIGN_ADD expression
    (17) expression -> . var_usage ASSIGN_SUB expression
    (18) expression -> . var_usage ASSIGN_MULT expression
    (19) expression -> . var_usage ASSIGN_DIV expression
    (20) expression -> . var_usage
    (21) expression -> . COMMAND_RANDOM ( expression )
    (23) expression -> . expression BOOL_AND expression
    (24) expression -> . expression BOOL_OR expression
    (25) expression -> . VAL_LITERAL
    (26) expression -> . expression - expression
    (27) expression -> . expression * expression
    (28) expression -> . expression / expression
    (29) expression -> . expression + expression
    (30) expression -> . expression COMP_EQU expression
    (31) expression -> . expression COMP_NEQU expression
    (32) expression -> . - expression
    (33) expression -> . expression COMP_LESS expression
    (34) expression -> . expression COMP_GTR expression
    (35) expression -> . expression COMP_LTE expression
    (36) expression -> . expression COMP_GTE expression
    (37) expression -> . ( expression )
    (14) var_usage -> . ID

    COMMAND_RANDOM  shift and go to state 9
    VAL_LITERAL     shift and go to state 8
    -               shift and go to state 14
    (               shift and go to state 3
    ID              shift and go to state 15

    expression                     shift and go to state 45
    var_usage                      shift and go to state 5

state 20

    (15) expression -> var_usage = . expression
    (15) expression -> . var_usage = expression
    (16) expression -> . var_usage ASSIGN_ADD expression
    (17) expression -> . var_usage ASSIGN_SUB expression
    (18) expression -> . var_usage ASSIGN_MULT expression
    (19) expression -> . var_usage ASSIGN_DIV expression
    (20) expression -> . var_usage
    (21) expression -> . COMMAND_RANDOM ( expression )
    (23) expression -> . expression BOOL_AND expression
    (24) expression -> . expression BOOL_OR expression
    (25) expression -> . VAL_LITERAL
    (26) expression -> . expression - expression
    (27) expression -> . expression * expression
    (28) expression -> . expression / expression
    (29) expression -> . expression + expression
    (30) expression -> . expression COMP_EQU expression
    (31) expression -> . expression COMP_NEQU expression
    (32) expression -> . - expression
    (33) expression -> . expression COMP_LESS expression
    (34) expression -> . expression COMP_GTR expression
    (35) expression -> . expression COMP_LTE expression
    (36) expression -> . expression COMP_GTE expression
    (37) expression -> . ( expression )
    (14) var_usage -> . ID

    COMMAND_RANDOM  shift and go to state 9
    VAL_LITERAL     shift and go to state 8
    -               shift and go to state 14
    (               shift and go to state 3
    ID              shift and go to state 15

    expression                     shift and go to state 46
    var_usage                      shift and go to state 5

state 21

    (16) expression -> var_usage ASSIGN_ADD . expression
    (15) expression -> . var_usage = expression
    (16) expression -> . var_usage ASSIGN_ADD expression
    (17) expression -> . var_usage ASSIGN_SUB expression
    (18) expression -> . var_usage ASSIGN_MULT expression
    (19) expression -> . var_usage ASSIGN_DIV expression
    (20) expression -> . var_usage
    (21) expression -> . COMMAND_RANDOM ( expression )
    (23) expression -> . expression BOOL_AND expression
    (24) expression -> . expression BOOL_OR expression
    (25) expression -> . VAL_LITERAL
    (26) expression -> . expression - expression
    (27) expression -> . expression * expression
    (28) expression -> . expression / expression
    (29) expression -> . expression + expression
    (30) expression -> . expression COMP_EQU expression
    (31) expression -> . expression COMP_NEQU expression
    (32) expression -> . - expression
    (33) expression -> . expression COMP_LESS expression
    (34) expression -> . expression COMP_GTR expression
    (35) expression -> . expression COMP_LTE expression
    (36) expression -> . expression COMP_GTE expression
    (37) expression -> . ( expression )
    (14) var_usage -> . ID

    COMMAND_RANDOM  shift and go to state 9
    VAL_LITERAL     shift and go to state 8
    -               shift and go to state 14
    (               shift and go to state 3
    ID              shift and go to state 15

    expression                     shift and go to state 47
    var_usage                      shift and go to state 5

state 22

    (19) expression -> var_usage ASSIGN_DIV . expression
    (15) expression -> . var_usage = expression
    (16) expression -> . var_usage ASSIGN_ADD expression
    (17) expression -> . var_usage ASSIGN_SUB expression
    (18) expression -> . var_usage ASSIGN_MULT expression
    (19) expression -> . var_usage ASSIGN_DIV expression
    (20) expression -> . var_usage
    (21) expression -> . COMMAND_RANDOM ( expression )
    (23) expression -> . expression BOOL_AND expression
    (24) expression -> . expression BOOL_OR expression
    (25) expression -> . VAL_LITERAL
    (26) expression -> . expression - expression
    (27) expression -> . expression * expression
    (28) expression -> . expression / expression
    (29) expression -> . expression + expression
    (30) expression -> . expression COMP_EQU expression
    (31) expression -> . expression COMP_NEQU expression
    (32) expression -> . - expression
    (33) expression -> . expression COMP_LESS expression
    (34) expression -> . expression COMP_GTR expression
    (35) expression -> . expression COMP_LTE expression
    (36) expression -> . expression COMP_GTE expression
    (37) expression -> . ( expression )
    (14) var_usage -> . ID

    COMMAND_RANDOM  shift and go to state 9
    VAL_LITERAL     shift and go to state 8
    -               shift and go to state 14
    (               shift and go to state 3
    ID              shift and go to state 15

    expression                     shift and go to state 48
    var_usage                      shift and go to state 5

state 23

    (18) expression -> var_usage ASSIGN_MULT . expression
    (15) expression -> . var_usage = expression
    (16) expression -> . var_usage ASSIGN_ADD expression
    (17) expression -> . var_usage ASSIGN_SUB expression
    (18) expression -> . var_usage ASSIGN_MULT expression
    (19) expression -> . var_usage ASSIGN_DIV expression
    (20) expression -> . var_usage
    (21) expression -> . COMMAND_RANDOM ( expression )
    (23) expression -> . expression BOOL_AND expression
    (24) expression -> . expression BOOL_OR expression
    (25) expression -> . VAL_LITERAL
    (26) expression -> . expression - expression
    (27) expression -> . expression * expression
    (28) expression -> . expression / expression
    (29) expression -> . expression + expression
    (30) expression -> . expression COMP_EQU expression
    (31) expression -> . expression COMP_NEQU expression
    (32) expression -> . - expression
    (33) expression -> . expression COMP_LESS expression
    (34) expression -> . expression COMP_GTR expression
    (35) expression -> . expression COMP_LTE expression
    (36) expression -> . expression COMP_GTE expression
    (37) expression -> . ( expression )
    (14) var_usage -> . ID

    COMMAND_RANDOM  shift and go to state 9
    VAL_LITERAL     shift and go to state 8
    -               shift and go to state 14
    (               shift and go to state 3
    ID              shift and go to state 15

    expression                     shift and go to state 49
    var_usage                      shift and go to state 5

state 24

    (6) statement -> print_statement ; .

    COMMAND_RANDOM  reduce using rule 6 (statement -> print_statement ; .)
    VAL_LITERAL     reduce using rule 6 (statement -> print_statement ; .)
    -               reduce using rule 6 (statement -> print_statement ; .)
    (               reduce using rule 6 (statement -> print_statement ; .)
    COMMAND_PRINT   reduce using rule 6 (statement -> print_statement ; .)
    ID              reduce using rule 6 (statement -> print_statement ; .)
    TYPE            reduce using rule 6 (statement -> print_statement ; .)
    $end            reduce using rule 6 (statement -> print_statement ; .)


state 25

    (5) statement -> declaration ; .

    COMMAND_RANDOM  reduce using rule 5 (statement -> declaration ; .)
    VAL_LITERAL     reduce using rule 5 (statement -> declaration ; .)
    -               reduce using rule 5 (statement -> declaration ; .)
    (               reduce using rule 5 (statement -> declaration ; .)
    COMMAND_PRINT   reduce using rule 5 (statement -> declaration ; .)
    ID              reduce using rule 5 (statement -> declaration ; .)
    TYPE            reduce using rule 5 (statement -> declaration ; .)
    $end            reduce using rule 5 (statement -> declaration ; .)


state 26

    (21) expression -> COMMAND_RANDOM ( . expression )
    (15) expression -> . var_usage = expression
    (16) expression -> . var_usage ASSIGN_ADD expression
    (17) expression -> . var_usage ASSIGN_SUB expression
    (18) expression -> . var_usage ASSIGN_MULT expression
    (19) expression -> . var_usage ASSIGN_DIV expression
    (20) expression -> . var_usage
    (21) expression -> . COMMAND_RANDOM ( expression )
    (23) expression -> . expression BOOL_AND expression
    (24) expression -> . expression BOOL_OR expression
    (25) expression -> . VAL_LITERAL
    (26) expression -> . expression - expression
    (27) expression -> . expression * expression
    (28) expression -> . expression / expression
    (29) expression -> . expression + expression
    (30) expression -> . expression COMP_EQU expression
    (31) expression -> . expression COMP_NEQU expression
    (32) expression -> . - expression
    (33) expression -> . expression COMP_LESS expression
    (34) expression -> . expression COMP_GTR expression
    (35) expression -> . expression COMP_LTE expression
    (36) expression -> . expression COMP_GTE expression
    (37) expression -> . ( expression )
    (14) var_usage -> . ID

    COMMAND_RANDOM  shift and go to state 9
    VAL_LITERAL     shift and go to state 8
    -               shift and go to state 14
    (               shift and go to state 3
    ID              shift and go to state 15

    var_usage                      shift and go to state 5
    expression                     shift and go to state 50

state 27

    (30) expression -> expression COMP_EQU . expression
    (15) expression -> . var_usage = expression
    (16) expression -> . var_usage ASSIGN_ADD expression
    (17) expression -> . var_usage ASSIGN_SUB expression
    (18) expression -> . var_usage ASSIGN_MULT expression
    (19) expression -> . var_usage ASSIGN_DIV expression
    (20) expression -> . var_usage
    (21) expression -> . COMMAND_RANDOM ( expression )
    (23) expression -> . expression BOOL_AND expression
    (24) expression -> . expression BOOL_OR expression
    (25) expression -> . VAL_LITERAL
    (26) expression -> . expression - expression
    (27) expression -> . expression * expression
    (28) expression -> . expression / expression
    (29) expression -> . expression + expression
    (30) expression -> . expression COMP_EQU expression
    (31) expression -> . expression COMP_NEQU expression
    (32) expression -> . - expression
    (33) expression -> . expression COMP_LESS expression
    (34) expression -> . expression COMP_GTR expression
    (35) expression -> . expression COMP_LTE expression
    (36) expression -> . expression COMP_GTE expression
    (37) expression -> . ( expression )
    (14) var_usage -> . ID

    COMMAND_RANDOM  shift and go to state 9
    VAL_LITERAL     shift and go to state 8
    -               shift and go to state 14
    (               shift and go to state 3
    ID              shift and go to state 15

    var_usage                      shift and go to state 5
    expression                     shift and go to state 51

state 28

    (24) expression -> expression BOOL_OR . expression
    (15) expression -> . var_usage = expression
    (16) expression -> . var_usage ASSIGN_ADD expression
    (17) expression -> . var_usage ASSIGN_SUB expression
    (18) expression -> . var_usage ASSIGN_MULT expression
    (19) expression -> . var_usage ASSIGN_DIV expression
    (20) expression -> . var_usage
    (21) expression -> . COMMAND_RANDOM ( expression )
    (23) expression -> . expression BOOL_AND expression
    (24) expression -> . expression BOOL_OR expression
    (25) expression -> . VAL_LITERAL
    (26) expression -> . expression - expression
    (27) expression -> . expression * expression
    (28) expression -> . expression / expression
    (29) expression -> . expression + expression
    (30) expression -> . expression COMP_EQU expression
    (31) expression -> . expression COMP_NEQU expression
    (32) expression -> . - expression
    (33) expression -> . expression COMP_LESS expression
    (34) expression -> . expression COMP_GTR expression
    (35) expression -> . expression COMP_LTE expression
    (36) expression -> . expression COMP_GTE expression
    (37) expression -> . ( expression )
    (14) var_usage -> . ID

    COMMAND_RANDOM  shift and go to state 9
    VAL_LITERAL     shift and go to state 8
    -               shift and go to state 14
    (               shift and go to state 3
    ID              shift and go to state 15

    var_usage                      shift and go to state 5
    expression                     shift and go to state 52

state 29
